# abonawas

./: README.md  deploy-commands.js  index.js  nixpacks.toml  package.json  railway.toml
abonawas/: cookies.txt  main.py  readme.md  requirements.txt
abonawas-main-updated/quran-stream-bot/: requirements.txt
commands/: pause.js  play.js  queue.js  resume.js  skip.js  stop.js
discord-music-bot-final/: package.json  railway.json
discord-music-bot-final/src/buttons/: skip.js
discord-music-bot-final/src/commands/: queue.js  stop.js
discord-music-bot-railway/: README.md  package.json  railway.json
discord-music-bot-railway/discord-music-bot-final/: README.md
discord-music-bot-railway/src/: index.js
discord-music-bot-railway/src/buttons/: destroy.js  loop.js  (+4 more)
discord_quran_bot/: Dockerfile  README.md  bot.py  pyproject.toml  railway.toml  requirements.txt
discord_quran_bot/services/: audio_service.py
discord_quran_bot/tests/: test_audio_service.py  test_commands.py
events/: interactionCreate.js  ready.js  voiceStateUpdate.js
quran-stream-bot/: bot.py  cookies.txt  nixpacks.toml  requirements.txt
quran-stream-bot/cogs/: help.py  player.py  search.py  ui.py
quran-stream-bot/modules/: downloader.py  logger_config.py  playlist_store.py
quran_bot_full/: bot.py  requirements.txt
quran_bot_full/cogs/: azkar.py  help.py  player.py
quran_bot_full/modules/: downloader.py  logger_config.py  playlist_store.py
quran_bot_full/services/: azkar_provider.py
quran_bot_full/stores/: guild_config_store.py
services/: audioService.js
utils/: logger.js
(+15 files in other folders)
